# blog_curso

./: README.md  pyproject.toml
blog/: manage.py  settings.py
blog/blog/: models.py  urls.py  views.py
blog/blog/migrations/: 0001_initial.py  0002_alter_post_data_publicacao.py
blog/blog/templates/blog/: home.html  post_detail.html
blog/core/: settings.py  urls.py
