[tool.poetry]
name = "aplicações web responsivas com django 4 e bootstrap 5"
version = "0.1.0"
description = ""
authors = ["Newton Miotto <newton.a.r.miotto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
